<resources>
    <string name="app_name">CGPS</string>
    <string name="action_start">Start</string>
    <string name="action_stop">Stop</string>
    <string name="info_stopped">Stopped</string>
    <string name="service_action">Service</string>

    <string name="hardware_single">Hardware</string>
    <string name="google_single">Google</string>
    <string name="huawei_single">Huawei</string>

    <string name="location_service_working">Location service is working</string>
    <string name="location_service_description_text">Channel for location service</string>
    <string name="stop_service_text">Stop service</string>

    <string name="location_type_not_supported">Coarse location is not supported</string>
</resources>
