<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:fontFamily="sans-serif-black"
        android:textSize="42sp"
        android:textColor="?android:attr/textColorPrimary"
        android:text="@string/app_name"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".MainActivity"
        tools:showIn="@layout/fragment_main">

        <TextView
            android:id="@+id/tv_hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Select variant to obtain location below"
            android:gravity="center"
            android:textColor="?android:attr/textColorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/b_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_action"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/b_location_updates"
            app:layout_constraintRight_toRightOf="parent"/>

        <Button
            android:id="@+id/b_location_updates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/b_service"/>

        <Button
            android:id="@+id/hardware_single"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hardware_single"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toTopOf="@+id/b_location_updates"
            app:layout_constraintLeft_toLeftOf="parent" />

        <Button
            android:id="@+id/google_single"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/google_single"
            app:layout_constraintBottom_toTopOf="@+id/b_location_updates"
            app:layout_constraintLeft_toRightOf="@+id/hardware_single"
            app:layout_constraintRight_toLeftOf="@+id/huawei_single"/>

        <Button
            android:id="@+id/huawei_single"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/huawei_single"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toTopOf="@+id/b_location_updates"
            app:layout_constraintRight_toRightOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>